--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,10 +1,10 @@
 
 @media screen and (max-width: 1000px) {
-  .container {
+  body {
     max-width: 1000px;
+    width: 100%;
   }
-  
-    body {
+   .container {
     width: 100%;
   }
 
@@ -13,14 +13,20 @@
 @media screen and (max-width: 670px) {
 
   body {
+    max-width: 670px;
+    /* width: 100%; */
+  }
+
+  .container {
+    width: 100%;
+  }
+
+  header {
     width: 100%;
   }
 
   .header-wrapper {
     width: 670px;
-  }
-   .container {
-    max-width: 670px;
   }
 
   .top-button {
@@ -57,8 +63,8 @@
 
 
   .main-title {
-    width: 77%;
-    top: 105px;
+    width: 82%;
+    top: 100px;
     right: 0px;
 
   }
@@ -71,7 +77,7 @@
 
   .main-top {
     width: 670px;
-    top: 50px;
+    top: 35px;
   }
 
   .main-top img {
