--- a/css/responsive.css
+++ b/css/responsive.css
@@ -26,12 +26,12 @@
   }
 
   .header-wrapper {
-    width: 670px;
+    width: 100%;
   }
 
   .top-button {
   position: fixed;
-  width: 670px;
+  width: 100%;
   top: 580px;
   left: 560px;
 }
@@ -57,8 +57,13 @@
 
   /* -------------------- common -------------------- */
 
+  .main-wrapper{
+    height: 940px;
+    width: 100%;
+  }
+
   .main-body {
-  width: 670px;
+  width: 100%;
 }
 
 
@@ -70,13 +75,13 @@
   }
 
   .main-image {
-    width: 670px;
+    width: 100%;
     margin: 0;
     top: 60px;
   }
 
   .main-top {
-    width: 670px;
+    width: 100%;
     top: 35px;
   }
 
@@ -84,14 +89,11 @@
     width: 107%;
   }
 
-  .main-wrapper{
-    height: 940px;
-    width: 670px;
-  }
+
 
 
   .concept-luncheon-wrapper {
-    width: 670px;
+    width: 100%;
     top: -6px;
     height: 1942px;
   }
@@ -200,19 +202,19 @@
 }
 
   .cl-PC {
-  width: 670px;
+  width: 100%;
   display: none;
   }
 
   .cl-SP {
-  width: 670px;
+  width: 100%;
   display: block;
   }
 
    /* -------------------- menu -------------------- */
 
   .menu-wrapper {
-    width: 670px;
+    width: 100%;
     margin-top: -100px;
     height: 4047px;
   }
@@ -461,14 +463,14 @@ letter-spacing: 1.5px;
 }
 
 .menu-SP {
-  width: 670px;
+  width: 100%;
   display: block;
 }
 
  /* -------------------- last -------------------- */
 
  .last-wrapper {
-  width: 670px;
+  width: 100%;
   height: 383px;
   position: relative;
   margin-top: 0px;
@@ -483,7 +485,7 @@ letter-spacing: 1.5px;
 
 
 .footer-wrapper {
-  width: 670px;
+  width: 100%;
   height: 141px;
 }
 
@@ -510,7 +512,7 @@ letter-spacing: 1.5px;
 }
 
 footer {
-  width: 670px;
+  width: 100%;
   height: 940px;
   background-color: #FFF9E6;
 }
