--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 body, a, h3, h4{
-  font-family: "DNP shueiMGoStd", 'M PLUS Rounded 1c', sans-serif;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
 .container {
@@ -152,7 +152,7 @@ li {
   text-align: center;
   color: #707070;
   margin-right: 1.25vw;
-  padding-top: 0.93vw;
+  padding-top: 1vw;
 }
 
 .sign-in {
@@ -185,6 +185,7 @@ li {
 .link-text  {
   font-size: 10px;
   letter-spacing: 0.36px;
+  padding-top: 0.3vw;
 }
 
 .grey-link {
@@ -211,7 +212,7 @@ li {
 
 .cart-link p {
   position: absolute;
-  top: 3.8vw;
+  top: 4vw;
   left: 0;
   right: 0;
   margin: auto;
