--- a/css/style.css
+++ b/css/style.css
@@ -940,7 +940,7 @@ li {
 
 .concept-text {
   text-align: center;
-  margin-top: 4vh;
+  margin-top: 7vh;
   position: relative;
 }
 
@@ -962,53 +962,49 @@ li {
 
 .luncheon-wrapper {
   text-align: center;
-  margin-top: 325px;
+  margin-top: 55vh;
   z-index: 70;
 }
 
 .present {
-  padding-bottom: 47px;
+  padding-bottom: 3.67vh;
 }
 
 .luncheon-text  {
-  padding-bottom: 67px;
+  padding-bottom: 5.23vh;
 }
 
 .luncheon_photo {
-  width: 82%;
-  margin-top: -2.13vh;
-  padding-bottom: 90px;
+  width: 80%; 
+  padding-bottom: 17vh;
 }
 
 .dl {
-  text-align: center;
+  justify-content: center;
   position: relative;
+  display: flex;
   color: white;
   padding-bottom: 48px;
 }
 
-.dl h4 {
+.dl-text h4 {
   font-size: 28px;
   letter-spacing: 4px;
 }
 
-.dl p {
-  padding-top: 2px;
+.dl-text p {
+  padding-top: 0.3vh;
   font-size: 18px;
   letter-spacing: 3px;
 }
 
-.line {
-  position: relative;
-}
-
-.line :first-child {
+.dl img :first-child {
   position: absolute;
   top: -90px;
   left: 270px;
 }
 
-.line :nth-child(2) {
+.dl img :nth-child(2) {
   position: absolute;
   top: -90px;
   right: 270px;
@@ -1016,17 +1012,22 @@ li {
 
 .coloring {
   display: flex;
-  justify-content: center;
-  padding: 0 100px;
+  width: 74%;
+  position: relative;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 
 .coloring-common {
   text-align: center;
+  display: block;
 }
 
-.coloring-common:first-child {
-  padding-right: 28px;
+.coloring-common img {
+  width: 90%;
 }
+
 
 
 .copy-button {
@@ -1530,6 +1531,15 @@ opacity: 0.8;
   .concept-luncheon-bg img:first-child {
    left: -17%;
   }
+  .luncheon-wrapper {
+    margin-top: 46vh;
+}
+
+  .luncheon_photo {
+  padding-bottom: 12vh;
+}
+
+
 }
 
 @media only screen and (min-width : 1640px) and (max-width: 1839px) {
@@ -1537,22 +1547,51 @@ opacity: 0.8;
   .concept-luncheon-bg img:first-child {
    left: -9%;
   }
+  .luncheon_photo {
+  width: 75%;
+  padding-bottom: 5vh;
 }
-
+  .luncheon-wrapper {
+    margin-top: 40vh;
+}
+}
 
 @media only screen and (min-width : 1840px) and (max-width: 1919px) {
 
   .concept-luncheon-bg img:first-child {
-   left: -4%;
+   left: -3%;
   }
+    .luncheon-wrapper {
+    margin-top: 30vh;
+  }
+  .luncheon_photo {
+  width: 65%;
+  padding-bottom: 4vh;
+  }
+  .coloring {
+  width: 64%;
+}
+
 }
 
 @media only screen and (min-width: 1920px) {
+
+    .luncheon-wrapper {
+    margin-top: 23vh;
+  }
 
   .concept-luncheon-bg img:first-child {
    width: 100%;
    left: 0%;
   }
+  .luncheon_photo {
+  width: 65%;
+  padding-bottom: 4vh;
+  }
+  .coloring {
+  width: 64%;
+}
+
 }
 
 
