--- a/css/style.css
+++ b/css/style.css
@@ -1172,7 +1172,7 @@ li {
   position: relative;
   transform: translateX(-50%);
   left: 50%;
-  margin-top: 10vh;
+  margin-top: 15vh;
 }
 
 .millefeuille-img {
@@ -1303,7 +1303,7 @@ li {
   position: relative;
   transform: translateX(-50%);
   left: 50%;
-  margin-top: 22vh;
+  margin-top: 25vh;
 }
 
 .juice {
@@ -1319,8 +1319,8 @@ li {
 .juice-img :nth-child(2) {
   position: relative;
   transform: rotate(-0.0621turn);
-  top: -180px;
-  right: -190px;
+  top: -220px;
+  right: 10px;
 }
 
 .juice > .about-odd .about-text  {
@@ -1328,9 +1328,8 @@ li {
 }
 
 .juice > .about-odd img{
-  position: relative;
-  left: -9%;
-  top: -25%;
+  right: 7%;
+  top: 8%;
 }
 
 .buy-button {
@@ -1590,7 +1589,7 @@ opacity: 0.8;
 }
 
 .millefeuille {
-  margin-top: 15vh;
+  margin-top: 17vh;
 }
 
 .millefeuille > .about-odd img {
@@ -1623,7 +1622,7 @@ opacity: 0.8;
 }
 
 .juice > .about-odd img {
- left: -3%;
+ right: 11%;
 }
 
 .juice-img :first-child {
